fix(datepicker): higher z-index

--- a/src/styles/generic/_global.scss
+++ b/src/styles/generic/_global.scss
@@ -4,3 +4,7 @@
 .zEWidget-launcher {
 	z-index: $g-c-global-navbar-z !important;
 }
+
+.react-datepicker-popper {
+	z-index: $g-c-modal-z;
+}
